(1.20+) add keyboard interactions to hud entries
- fix an only just introduced bug
- fix a bug that's existed since 2022